# nxrm-sdk

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pre-commit-config.yml  .travis.yml  README.md  SECURITY.md  git_push.sh  main.sh  openapi.json  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.trunk/: trunk.yaml
docs/: AbstractApiRepository.md  AnonymousAccessSettingsXO.md  ApiCertificate.md  ApiCreateUser.md  ApiEmailConfiguration.md  ApiEmailValidation.md  ApiLicenseDetailsXO.md  ApiPrivilege.md  ApiPrivilegeApplicationRequest.md  ApiPrivilegeRepositoryAdminRequest.md  ApiPrivilegeRepositoryContentSelectorRequest.md  ApiPrivilegeRepositoryViewRequest.md  ApiPrivilegeScriptRequest.md  ApiPrivilegeWildcardRequest.md  ApiUser.md  ApiUserSource.md  AptHostedApiRepository.md  AptHostedRepositoriesAttributes.md  AptHostedRepositoryApiRequest.md  AptProxyApiRepository.md  AptProxyRepositoriesAttributes.md  AptProxyRepositoryApiRequest.md  AptSigningRepositoriesAttributes.md  AssetXO.md  AssetsApi.md  AzureBlobStoreApi.md  AzureBlobStoreApiAuthentication.md  AzureBlobStoreApiBucketConfiguration.md  AzureBlobStoreApiModel.md  AzureConnectionXO.md  BaseTagXO.md  BlobStoreApi.md  BlobStoreApiSoftQuota.md  BlobStoreQuotaResultXO.md  BowerAttributes.md  BowerGroupRepositoryApiRequest.md  BowerHostedRepositoryApiRequest.md  BowerProxyApiRepository.md  BowerProxyRepositoryApiRequest.md  CleanupPolicyAttributes.md  (+153 more)
nexus_sdk/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py  schemas.py
(+2654 files in other folders)
