[tool.poetry]
name = "sonatype-nexus-sdk"
version = "0.1.3"
description = "Python SDK for Sonatype Products such as Nexus Repository Manager, Lifecycle and IQ Server "
authors = ["Justin Bailey <justthered63@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "nexus_sdk" }]

[tool.poetry.dependencies]
python = "^3.9"
certifi = "^2023.5.7"
frozendict = "^2.3.8"
python-dateutil = "^2.8.2"
setuptools = "^67.8.0"
typing-extensions = "^4.6.2"
urllib3 = "^2.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
pytest-randomly = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
