[tool.poetry]
name = "sonatype-nxrm-sdk"
version = "0.1.5"
description = "Python SDK for Sonatype Nexus Repository Manager"
authors = ["Justin Bailey <justthered63@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "nxrm_sdk" }]

[tool.poetry.dependencies]
python = "^3.9"
certifi = "^2023.5.7"
frozendict = "^2.3.8"
python-dateutil = "^2.8.2"
setuptools = "^67.8.0"
typing-extensions = "^4.6.3"
six = "^1.16.0"
urllib3 = "^2.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
pytest-randomly = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
